semana 02_bloques y tablas

--- a/Semana 2/tablas.html
+++ b/Semana 2/tablas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <table>
+        <caption>Subtitulo de tabla</caption>
         <tbody>
             <tr>
                 <th>Id</th>
@@ -15,14 +16,14 @@
                 <th>First Name</th>
             </tr>
             <tr>
-                <th>1</th>
-                <th>Rosi</th>
-                <th>Jarquin</th>
+                <td >1</td>
+                <td colspan="2">Rosi 
+                     Jarquin</td>
             </tr>
             <tr>
-                <th>2</th>
-                <th>Ester</th>
-                <th>Jiron</th>
+                <td>2</td>
+                <td>Ester</td>
+                <td>Jiron</td>
             </tr>
         </tbody>
     </table>
