--- a/Semana 7/listarCurso.html
+++ b/Semana 7/listarCurso.html
@@ -32,6 +32,7 @@
                             <th>Nombre</th>
                             <th>Descripcion</th>
                             <th>Tiempo</th>
+                            <th>Usuario</th>
                         </tr>
                         </thead>
                         <tbody class="table-group-divider" id="resultados">
@@ -85,6 +86,7 @@
                     <td>${valor.nombre}</td>
                     <td>${valor.descripcion}</td>
                     <td>${valor.tiempo}</td>
+                    <td>${valor.usuario}</td>
                 </tr>`;
 
         }
