--- a/Semana 7/crearCurso.html
+++ b/Semana 7/crearCurso.html
@@ -69,10 +69,10 @@
         alert('Please enter');
 
         var datoenviar = {
-            nombre: 'Multimedios 01R',
-            descripcion: 'Curso Front and Backend',
-            tiempo: '2 Semestre',
-            usuario: 'Rosita'
+            nombre: document.querySelector("#Nombre").value,
+            descripcion: document.querySelector("#Descripcion").value,
+            tiempo:  document.querySelector("#Tiempo").value,
+            usuario: 'Rosi',
         }
 
         console.log(datoenviar);
